--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,18 @@ version: "3.8"
 
 services:
   mysql:
-    user: "${UID}:${GID}" 
-    image: mysql:5.7
-    container_name: mysql
+    image: mysql
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: devops
-      MYSQL_USER: admin
-      MYSQL_PASSWORD: admin
+      MYSQL_DATABASE: "devops"
+      MYSQL_USER: "root"
+      MYSQL_ROOT_PASSWORD: "root"
+    ports:
+      - "3306:3306"
     volumes:
-      - ./mysql-data:/var/lib/mysql
-      - ./message.sql:/docker-entrypoint-initdb.d/message.sql  
+      - mysql-data:/var/lib/mysql
     networks:
-      - twotier
+      - two-tier
+    restart: always
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-proot"]
       interval: 10s
@@ -22,9 +21,10 @@ services:
       retries: 5
       start_period: 60s
 
-  flask-app:
-    image: trainwithshubham/two-tier-flask-app:latest
-    container_name: flask-app
+  flask:
+    build:
+      context: .
+    container_name: two-tier-backend
     ports:
       - "5000:5000"
     environment:
@@ -32,17 +32,20 @@ services:
       MYSQL_USER: root
       MYSQL_PASSWORD: root
       MYSQL_DB: devops
-    depends_on:
-      - mysql
-    networks:
-      - twotier
     restart: always
+    networks:
+      - two-tier
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:5000/health || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 5
       start_period: 30s
+    depends_on:
+      - mysql 
+
+volumes:
+  mysql-data:
 
 networks:
-  twotier:
+  two-tier:
